kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gbv-replybot
  labels:
    app: gbv-replybot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gbv-replybot
  template:
    metadata:
      labels:
        app: gbv-replybot
    spec:
      containers:
      - name: gbv-replybot
        image: nandanrao/gbv-replybot:0.0.2
        resources:
          requests:
            cpu: "100m"
            memory: "500Mi"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: keys
            mountPath: /usr/src/app/keys
            readOnly: true
      volumes:
        - name: keys
          secret:
            secretName: gbv-replybot-keys
