kube/facebot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gbv-facebot
  labels:
    app: gbv-facebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gbv-facebot
  template:
    metadata:
      labels:
        app: gbv-facebot
    spec:
      containers:
      - name: gbv-facebot
        image: localhost:5000/facebot:registry
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
            memory: "30Mi"
        ports:
        - containerPort: 3000
        - containerPort: 4000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gbv-facebroker
  labels:
    app: gbv-facebroker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gbv-facebroker
  template:
    metadata:
      labels:
        app: gbv-facebroker
    spec:
      containers:
      - name: gbv-facebroker
        image: localhost:5000/facebot:registry
        args:
        - node
        - broker.js
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
            memory: "30Mi"
        ports:
        - containerPort: 4000
        - containerPort: 4001
---

kind: Service
apiVersion: v1
metadata:
  name: gbv-facebot
spec:
  selector:
    app: gbv-facebot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: http
  - protocol: TCP
    port: 4000
    name: zmq
---

kind: Service
apiVersion: v1
metadata:
  name: gbv-facebroker
spec:
  selector:
    app: gbv-facebroker
  ports:
  - protocol: TCP
    port: 4000
    name: zmq-frontend
  - protocol: TCP
    port: 4001
    name: zmq-backend
