kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gbv-facebot
spec:
  selector:
    app: gbv-facebot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 88
